# minibit

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: comparison_bench.rs  protocol_bench.rs
criterion/batch_operations/report/: index.html
criterion/batch_throughput/report/: index.html
criterion/decoding_comparison/report/: index.html
criterion/encoding_comparison/report/: index.html
criterion/quote_decode/base/: benchmark.json  estimates.json  tukey.json
criterion/quote_decode/change/: estimates.json
criterion/quote_decode/new/: sample.json
criterion/quote_decode/report/: index.html
criterion/quote_encode/base/: sample.json  tukey.json
criterion/quote_encode/change/: estimates.json
criterion/quote_encode/new/: benchmark.json  estimates.json
criterion/quote_encode/report/: index.html
criterion/report/: index.html
criterion/roundtrip_comparison/report/: index.html
criterion/size_comparison_dummy/base/: benchmark.json  estimates.json
criterion/size_comparison_dummy/new/: sample.json  tukey.json
criterion/size_comparison_dummy/report/: index.html
criterion/trade_decode_full/base/: tukey.json
criterion/trade_decode_full/change/: estimates.json
criterion/trade_decode_full/new/: benchmark.json  estimates.json  sample.json
criterion/trade_decode_full/report/: index.html
criterion/trade_decode_minimal/base/: estimates.json  sample.json
criterion/trade_decode_minimal/change/: estimates.json
examples/: basic_usage.rs
src/: bench.rs  bitmap.rs  crc32c.rs  decoder.rs  encoder.rs  error.rs  frame.rs  lib.rs  messages.rs  varint.rs
tests/: integration_tests.rs
(+392 files in other folders)
